# Multithreaded-CPP-Backup-Server

./: README.md
client/: backup.info  client.py  clientSoc.py  server.info
server/: CMakeLists.txt  Makefile  constants.h  main.cpp  server  server.h
